# examples-googleapi

./: .gitignore  01_user_and_drives.py  02_properties_and_labels.py  03_comments.py  04_download.py  05_export_single.py  06_batch_export.py  07_search.py  08_envvar_auth.py  09_batch_export_parallel.py  ARCHITECTURE.md  README.md  example.env  gdfs.env.example  pyproject.toml  requirements.txt
examples/: 01_user_and_drives.py  02_properties_and_labels.py  03_comments.py  04_download.py  05_export_single.py  06_batch_export.py  07_search.py  README.md
examples/exported_docs/16vqnCLrQWeLqCjuFFyaaDC9mfX0sJPfYoeWKmfw7FNQ/: comments.json  content.md  metadata.json
examples/exported_docs/1TABUvAt2w7LmWjdFPHVxnOAuzeb5u5KJZ34V9FUcfio/: comments.json  content.md  metadata.json
examples/exported_docs/1_Aa4YkzEASDP5Kcgj6VG7dMmB891azneTMZP41ntOYQ/: comments.json  content.md  metadata.json
gdrivekit/: __init__.py  item.py
gdrivekit/auth/: __init__.py  client.py  storage.py
gdrivekit/clients/: __init__.py  drive.py  labels.py  sheets.py  slides.py
gdrivekit/export/: __init__.py  cache.py  models.py
gdrivekit/export/docs/: __init__.py  converters.py  exporters.py
gdrivekit/export/sheets/: __init__.py  converters.py  exporters.py
gdrivekit/export/slides/: __init__.py  converters.py  exporters.py
