[project]
name = "gdrive-tools"
version = "0.1.0"
description = "Testing environment for Google Drive tools"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "googleapi-oauth @ file:///path/to/googleapi-oauth",
    "secretstore @ file:///path/to/secretstore",
    "googleapi-drive @ file:///path/to/googleapi-drive",
    "googleapi-docs @ file:///path/to/googleapi-docs",
    "googleapi-sheets @ file:///path/to/googleapi-sheets",
    "googleapi-slides @ file:///path/to/googleapi-slides",
    "googleapi-labels @ file:///path/to/googleapi-labels",
]

